Modify file structure for project

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,9 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <title th:text="'InstaTeam | ' + ${page_title}">InstaTeam</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inconsolata:400,700'  type='text/css'/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="@{css/normalize.css}"/>
-    <link rel="stylesheet" href="@{css/site.css}"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" th:href="@{/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/site.css}"/>
 </head>
 
 <body>
