--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -5,25 +5,27 @@
 
 <body>
     <header th:replace="layout :: header"></header>
-    <nav th:replace="layout :: nav"></nav>
+    <nav class="nav">
+        <ul>
+            <li><a th:href="@{/}">Projects</a></li>
+            <li><a th:href="@{/collaborators}">Collaborators</a></li>
+            <li class="selected"><a th:href="@{/roles}">Roles</a></li>
+        </ul>
+    </nav>
 
     <section>
         <div class="container wrapper">
-            <form th:action="@{${action}}" method="post" th:object="${role}">
+            <form th:action="@{/roles}" method="post" th:object="${newRole}">
                 <input type="hidden" th:field="*{id}" />
                 <h2>Manage Roles</h2>
                 <div>
-                    <ul class="checkbox-list">
-                        <li><span class="primary">Developer</span></li>
-                        <li><span class="primary">Designer</span></li>
-                        <li><span class="primary">QA</span></li>
-                        <li><span class="primary">DevOps</span></li>
-                        <li><span class="primary">Copywriter</span></li>
+                    <ul class="checkbox-list" th:each="role : ${roles}">
+                        <li><span th:text="${role.name}" class="primary">Developer</span></li>
                     </ul>
                 </div>
                 <div class="actions add-new-role">
                     <input type="text" th:field="*{name}" placeholder="New Role..."/>
-                    <input type="submit" th:value="${submit}" class="button"/>
+                    <button type="submit" class="button">Add</button>
                 </div>
             </form>
         </div>
