--- a/src/main/resources/templates/collaborator/add.html
+++ b/src/main/resources/templates/collaborator/add.html
@@ -5,38 +5,37 @@
 
 <body>
     <header th:replace="layout :: header"></header>
-    <nav th:replace="layout :: nav"></nav>
+    <nav class="nav">
+        <ul>
+            <li><a th:href="@{/}">Projects</a></li>
+            <li class="selected"><a th:href="@{/collaborator}">Collaborators</a></li>
+            <li><a th:href="@{/role}">Roles</a></li>
+        </ul>
+    </nav>
 
     <section>
         <div class="container wrapper">
             <form th:action="@{${action}}" method="post" th:object="${collaborator}">
-                <input type="hidden" th:field="*{id}" />
                 <h2>Manage Collaborators</h2>
-                <ul class="checkbox-list">
+                <ul class="checkbox-list" th:each="collab : ${collaborators}">
                     <li>
-                        <span class="primary">Michael Pemulius</span>
+                        <span class="primary" th:text="${collab.name}">Michael Pemulius</span>
+                        <span class="secondary" th:text="${collab.role}">Developer</span>
                         <div class="custom-select">
                             <span class="dropdown-arrow"></span>
-                            <select>
-                                <option value="#">Designer</option>
-                                <option value="#">Developer</option>
-                                <option value="#">QA</option>
-                                <option value="#">DevOps</option>
+                            <select th:field="*{role}">
+                                <option th:each="role : ${roles}" th:text="${role.name}" th:value="${role.id}">Role...</option>
                             </select>
                         </div>
                     </li>
                 </ul>
                 <div class="actions add-new-collaborator">
+                    <input type="hidden" th:field="*{id}" />
                     <input type="text" th:field="*{name}" placeholder="Name..." />
                     <div class="custom-select">
                         <span class="dropdown-arrow"></span>
                         <select th:field="*{role}">
-                            <option value="#">Role...</option>
-                            <option value="#">Developer</option>
-                            <option value="#">Designer</option>
-                            <option value="#">QA</option>
-                            <option value="#">DevOps</option>
-                            <option value="#">Copywriter</option>
+                            <option th:each="role : ${roles}" th:text="${role.name}" th:value="${role.id}">Role...</option>
                         </select>
                     </div>
                     <input type="submit" th:value="${submit}" class="button"/>
