Modify layout view and site.css

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,8 +23,8 @@
     <nav th:fragment="nav" class="nav">
         <ul>
             <li class="selected"><a th:href="@{/}">Projects</a></li>
-            <li><a th:href="@{/collaborators}">Collaborators</a></li>
-            <li><a th:href="@{/roles}">Roles</a></li>
+            <li><a th:href="@{/collaborator}">Collaborators</a></li>
+            <li><a th:href="@{/role}">Roles</a></li>
         </ul>
     </nav>
 </body>
