--- a/src/main/resources/static/site.css
+++ b/src/main/resources/static/site.css
@@ -368,9 +368,11 @@ form .checkbox-list li {
 	padding: 23px 35px;
 	margin:  0 -35px;
 }
+/*
 form .checkbox-list li:last-child {
 	border-bottom: 1px solid #e1e0e0;
 }
+*/
 form .checkbox-list li input {
 	margin-right: 3px;
 }
@@ -401,7 +403,7 @@ form .add-new-collaborator .custom-select {
 }
 form .add-new-role .button,
 form .add-new-collaborator .button {
-	width: 30px;
+	width: 60px;
 	text-align: center;
 	float: left;
 	margin: 0;
