Modify layout view and site.css

--- a/src/main/resources/static/site.css
+++ b/src/main/resources/static/site.css
@@ -190,6 +190,9 @@ strong {
 .tag.archived {
 	background: #bbbab9;
 }
+.tag.not_started {
+    background: #ffa500;
+}
 .list-item {
 	border-top: 1px solid #e1e0e0;
 	padding: 18px 35px;
