Modify template views

--- a/src/main/resources/templates/collaborator/add.html
+++ b/src/main/resources/templates/collaborator/add.html
@@ -5,17 +5,9 @@
 
 <body>
     <header th:replace="layout :: header"></header>
-    <nav class="nav">
-        <ul>
-            <li><a th:href="@{/}">Projects</a></li>
-            <li class="selected"><a th:href="@{/collaborator}">Collaborators</a></li>
-            <li><a th:href="@{/role}">Roles</a></li>
-        </ul>
-    </nav>
-
+    <nav th:replace="layout :: nav"></nav>
     <section>
         <div class="container wrapper">
-            <form th:action="@{${action}}" method="post" th:object="${collaborator}">
                 <h2>Manage Collaborators</h2>
                 <ul class="checkbox-list" th:each="collab : ${collaborators}">
                     <li>
@@ -23,12 +15,13 @@
                         <span class="secondary" th:text="${collab.role}">Developer</span>
                         <div class="custom-select">
                             <span class="dropdown-arrow"></span>
-                            <select th:field="*{role}">
+                            <select>
                                 <option th:each="role : ${roles}" th:text="${role.name}" th:value="${role.id}">Role...</option>
                             </select>
                         </div>
                     </li>
                 </ul>
+            <form th:action="@{${action}}" method="post" th:object="${newCollaborator}">
                 <div class="actions add-new-collaborator">
                     <input type="hidden" th:field="*{id}" />
                     <input type="text" th:field="*{name}" placeholder="Name..." />
