--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -5,18 +5,10 @@
 
 <body>
     <header th:replace="layout :: header"></header>
-    <nav class="nav">
-        <ul>
-            <li><a th:href="@{/}">Projects</a></li>
-            <li><a th:href="@{/collaborator}">Collaborators</a></li>
-            <li class="selected"><a th:href="@{/role}">Roles</a></li>
-        </ul>
-    </nav>
-
+    <nav th:replace="layout :: nav"></nav>
     <section>
         <div class="container wrapper">
             <form th:action="@{/role}" method="post" th:object="${newRole}">
-                <input type="hidden" th:field="*{id}" />
                 <h2>Manage Roles</h2>
                 <div>
                     <ul class="checkbox-list" th:each="role : ${roles}">
@@ -24,6 +16,7 @@
                     </ul>
                 </div>
                 <div class="actions add-new-role">
+                    <input type="hidden" th:field="*{id}" />
                     <input type="text" th:field="*{name}" placeholder="New Role..."/>
                     <input type="submit" th:value="${submit}" class="button"/>
                 </div>
